--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lodash.clonedeep": "^4.5.0",
     "marked": "^15.0.11",
     "sass": "^1.87.0",
+    "tinycolor2": "^1.6.0",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2",
     "vue-color": "^3.0.1",
@@ -55,7 +56,9 @@
     "@4tw/cypress-drag-drop": "^2.3.0",
     "@electron/notarize": "^3.0.1",
     "@tsconfig/node22": "^22.0.1",
+    "@types/humanize-duration": "^3.27.4",
     "@types/node": "^22.14.0",
+    "@types/tinycolor2": "^1.4.6",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/tsconfig": "^0.7.0",
