--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@electron/notarize": "^3.0.1",
     "@tsconfig/node22": "^22.0.1",
     "@types/humanize-duration": "^3.27.4",
+    "@types/lodash.clonedeep": "^4.5.9",
     "@types/node": "^22.14.0",
     "@types/tinycolor2": "^1.4.6",
     "@vitejs/plugin-vue": "^5.2.3",
