--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,6 +6,7 @@
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "allowJs": true,
     "moduleResolution": "Node",
+    "strictNullChecks": true,
     "paths": {
       "@/*": ["./src/*"]
     }
