--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "electron": "^36.1.0",
     "electron-builder": "^26.0.12",
     "eslint": "^9.22.0",
+    "eslint-plugin-no-only-tests": "^3.3.0",
     "eslint-plugin-vue": "~10.0.0",
     "jiti": "^2.4.2",
     "npm-run-all2": "^7.0.2",
