--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "electron:release:mas": "npm run build && electron-builder --config electron-builder.mas.yml",
     "electron:build:beta": "npm run build && electron-builder --mac dir -c.productName=\"PomoTrackBeta\" -c.appId=\"app.pomotrack.beta\"",
     "electron:run:beta": "./dist_electron/mac/PomoTrackBeta.app/Contents/MacOS/PomoTrackBeta --inspect",
+    "capacitor:sync": "npm run build && npx cap sync ios",
     "test:basic": "npm audit && npm run type-check && npm run lint",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -29,6 +30,10 @@
     "cy:run": "cypress run -b chrome"
   },
   "dependencies": {
+    "@capacitor/cli": "^7.2.0",
+    "@capacitor/core": "^7.2.0",
+    "@capacitor/ios": "^7.2.0",
+    "@capacitor/status-bar": "^7.0.1",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
