--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "build-only": "vite build --outDir dist_web",
     "type-check": "vue-tsc --build",
     "electron:dev": "NODE_ENV=development electron .",
-    "electron:build": "npm run build && electron-builder",
-    "electron:release:mas": "npm run build && electron-builder --config electron-builder.mas.yml",
-    "electron:build:beta": "npm run build && electron-builder --mac dir -c.productName=\"PomoTrackBeta\" -c.appId=\"app.pomodash.beta\"",
+    "electron:build:beta": "npm run build && electron-builder --mac dir -c.productName=\"PomoTrackBeta\" -c.appId=\"app.pomodashbeta\"",
     "electron:run:beta": "./dist_electron/mac/PomoTrackBeta.app/Contents/MacOS/PomoTrackBeta --inspect",
+    "electron:build": "npm run build && electron-builder",
+    "electron:build:mas": "npm run build && electron-builder --config electron-builder.mas.yml",
     "capacitor:sync": "npm run build && npx cap sync ios",
     "test:basic": "npm audit && npm run type-check && npm run lint",
     "lint": "eslint .",
@@ -93,7 +93,7 @@
     "files": [
       "dist_web/**/*",
       "electron.js",
-      "preload.ts",
+      "preload.js",
       "package.json"
     ],
     "mac": {
