separate entitlements files

--- a/electron-builder.mas.yml
+++ b/electron-builder.mas.yml
@@ -19,6 +19,6 @@ mac:
   category: public.app-category.productivity
   hardenedRuntime: true
   icon: build/icon.icns
-  entitlements: build/entitlements.mac.plist
-  entitlementsInherit: build/entitlements.mac.plist
+  entitlements: build/entitlements.mas.plist
+  entitlementsInherit: build/entitlements.mas.plist
   provisioningProfile: build/Pomodash_Mac_App_Store_Profile.provisionprofile
