better error handlind

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "build-only": "vite build --outDir dist_web",
     "type-check": "vue-tsc --build",
     "electron:dev": "NODE_ENV=development electron .",
-    "electron:build:beta": "npm run build && electron-builder --mac --dir -c.productName=\"PomodashBeta\" -c.appId=\"app.pomodashbeta\"",
-    "electron:run:beta": "./dist_electron/mac/PomodashBeta.app/Contents/MacOS/PomodashBeta --inspect",
+    "electron:beta:build": "npm run build && electron-builder --mac --dir -c.productName=\"PomodashBeta\" -c.appId=\"app.pomodashbeta\"",
+    "electron:beta:run": "./dist_electron/mac/PomodashBeta.app/Contents/MacOS/PomodashBeta --inspect",
     "electron:build": "npm run build && electron-builder",
     "electron:build:mas": "npm run build && electron-builder --config electron-builder.mas.yml",
     "capacitor:sync": "npm run build && npx cap sync ios",
