--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "bootstrap-vue-next": "^0.29.1",
     "chartjs-plugin-annotation": "^3.1.0",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "check-disk-space": "^3.4.0",
     "color-manager": "https://github.com/dtom90/color-manager",
     "dexie": "^4.0.11",
     "dompurify": "^3.2.5",
@@ -93,6 +94,7 @@
     "files": [
       "dist_web/**/*",
       "electron.js",
+      "diskSpaceMonitor.mjs",
       "preload.js",
       "package.json"
     ],
