update cypress config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,7 @@ orbs:
   macos: circleci/macos@2.5.2
   windows: circleci/windows@5
   node: circleci/node@5.2.0
+  cypress: cypress-io/cypress@4
 
 jobs:
 
@@ -31,7 +32,7 @@ jobs:
           name: Run packages audit and lint
           command: ./docker/test_basic.sh
 
-  test-cypress:
+  build-prod:
     docker:
       - image: cimg/base:stable
     steps:
@@ -41,9 +42,6 @@ jobs:
       - run:
           name: Build & run production Docker image
           command: ./docker/prod.sh -d
-      - run:
-          name: Run cypress browser tests against production container
-          command: ./docker/test_cypress.sh
       - run:
           name: Stop production Docker contianer
           command: docker stop pomodash-prod
@@ -232,7 +230,16 @@ workflows:
               ignore:
                 - master
                 - gh-pages
-      - test-cypress:
+      - build-prod:
+          filters:
+            branches:
+              ignore:
+                - master
+                - gh-pages
+      - cypress/run:
+          install-browsers: true
+          start-command: 'npm run dev'
+          cypress-command: 'npx cypress run --browser chrome'
           filters:
             branches:
               ignore:
