fix electron runtime "check-disk-space" error

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "homepage": "https://github.com/dtom90/PomoTrack",
   "repository": "https://github.com/dtom90/PomoTrack",
-  "version": "0.18.9",
+  "version": "0.18.10",
   "private": true,
   "main": "electron.js",
   "scripts": {
@@ -18,7 +18,7 @@
     "build-only": "vite build --outDir dist_web",
     "type-check": "vue-tsc --build",
     "electron:dev": "NODE_ENV=development electron .",
-    "electron:beta": "npm run build && electron-builder --mac --dir -c.productName=\"PomodashBeta\" -c.appId=\"app.pomodashbeta\" -c.mac.identity=null && ./dist_electron/mac/PomodashBeta.app/Contents/MacOS/PomodashBeta --inspect",
+    "electron:beta": "npm run build && electron-builder --mac --dir -c.productName=\"PomodashBeta\" -c.appId=\"app.pomodashbeta\" -c.mac.identity=null && ./dist_electron/mac-arm64/PomodashBeta.app/Contents/MacOS/PomodashBeta --inspect",
     "electron:mas-dev": "npm run build && electron-builder --config electron-builder.mas-dev.yml && ./dist_electron_mas_dev/mas/Pomodash.app/Contents/MacOS/Pomodash --inspect",
     "electron:build": "npm run build && electron-builder",
     "electron:mas": "npm run build && electron-builder --config electron-builder.mas.yml",
@@ -41,6 +41,7 @@
     "bootstrap-vue-next": "^0.29.1",
     "chartjs-plugin-annotation": "^3.1.0",
     "chartjs-plugin-datalabels": "^2.2.0",
+    "check-disk-space": "^3.4.0",
     "color-manager": "https://github.com/dtom90/color-manager",
     "dexie": "^4.0.11",
     "dompurify": "^3.2.5",
@@ -69,11 +70,12 @@
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/tsconfig": "^0.7.0",
-    "check-disk-space": "^3.4.0",
     "cypress": "^14.3.2",
     "electron": "^36.2.0",
     "electron-builder": "^26.0.12",
     "eslint": "^9.22.0",
+    "eslint-plugin-chai-friendly": "^1.0.1",
+    "eslint-plugin-cypress": "^4.3.0",
     "eslint-plugin-no-only-tests": "^3.3.0",
     "eslint-plugin-vue": "~10.0.0",
     "jiti": "^2.4.2",
@@ -94,7 +96,6 @@
     "files": [
       "dist_web/**/*",
       "electron.js",
-      "diskSpaceMonitor.mjs",
       "preload.js",
       "package.json"
     ],
