remove build-windows

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -259,13 +259,13 @@ workflows:
             branches:
               only:
                 - master
-      - build-windows:
-          requires:
-            - create-release
-          filters:
-            branches:
-              only:
-                - master
+      # - build-windows:
+      #     requires:
+      #       - create-release
+      #     filters:
+      #       branches:
+      #         only:
+      #           - master
       - publish-release:
           requires:
             - build-mac
